--- a/Arduino_CAN/platformio.ini
+++ b/Arduino_CAN/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
 upload_port=COM4
 
 
@@ -20,6 +20,7 @@ lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
   sandeepmistry/CAN @ ~0.3.1
+  arduino-libraries/Servo @ ^1.2.1
 
   # Accept only backwards compatible bug fixes
   # (any version with the same major and minor versions, and an equal or greater patch version)
